2011-10-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call random_init.

	* src/gnuk.ld.in (__process_stack_size__): Fix.
	(.gnuk_random): Removed.

	* src/flash.c (flash_erase_binary, flash_write_binary): Remove
	support of random_byte in flash ROM.

	* src/neug.c (adccb): Use old API (was: chEvtSignalFlagsI).
	(adccb_err): Remove.
	(rng_gen, rng): Add the last argument adccb for adcStartConversion:
	This is old API of ADC driver.
	(adcgrpcfg): Remove callbacks, add CONT and SWSTART: This is old
	API of ADC driver.
	(adccb): Remove the first argument: This is old API of ADC driver.
	(neug_wait_full): New.

	* ChibiOS_2.0.8/os/hal/platforms/STM32/adc_lld.h (ADC_SAMPLE_1P5):
	Add (from new API).

	* src/random.c (random_init): New.
	(random_bytes_get, random_bytes_free, get_salt): Use NeuG.

	* src/Makefile.in (CSRC): Add neug.c.

	* src/neug.c: New.  Verbatim copy of NeuG/src/random.c.

	* boards/common/mcuconf-common.h (USE_STM32_ADC1): TRUE for NewG RNG.
	* src/chconf.h (CH_USE_SEMAPHORES): TRUE as ADC driver requires it.
	* src/halconf.h (CH_HAL_USE_ADC); TRUE for NewG RNG.

2011-07-22  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/OLIMEX_STM32_H103/board.h (BOARD_NAME): Fixed.

	* boards/STBEE_MINI/mcuconf.h: Added missing include of
	mcuconf-common.h.

2011-07-04  NIIBE Yutaka  <gniibe@fsij.org>

	* ChibiOS_2.0.8/os/ports/GCC/ARMCMx/chcore_v7m.c
	(_port_irq_epilogue, _port_switch_from_isr): Apply a patch of 2.2.6.

	* ChibiOS_2.0.8/os/hal/platforms/STM32/adc_lld.h: Apply a patch of
	ADC from the branch of ChibiOS_2.0.X.

2011-06-15  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.13.
	* src/usb_desc.c (gnukStringSerial): Updated.

2011-06-08  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]
	(MULADDC_1024_CORE, MULADDC_1024_LOOP): New.
	* polarssl-0.14.0/library/bignum.c (mpi_mul_hlp): Use
	MULADDC_1024_LOOP.

2011-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/include/polarssl/bn_mul.h [__arm__]